--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                     <li class="page-scroll">
                         <a href="#portfolio">Portfolio</a>
                     </li>
-                    <li class="page-scroll">
-                        <a href="#contact">Contact</a>
+                    <li>
+                        <a href="mailto:mark.monteiro23@gmail.com?subject=Awesome+Job+Offer+From+%5Benter+your+company+name+here%5D" target="_blank">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -85,7 +85,7 @@
                         <span class="skills">Software Engineer - Web Developer</span>
                         <ul class="social">
                             <li>
-                                <a href="mailto:mark.monteiro23@gmail.com" class="fa-stack" target="_blank">
+                                <a href="mailto:mark.monteiro23@gmail.com?subject=Awesome+Job+Offer+From+%5Benter+your+company+name+here%5D" class="fa-stack" target="_blank">
                                     <i class="fa fa-circle-thin fa-stack-2x"></i>
                                     <i class="fa fa-envelope-o fa-stack-1x"></i>
                                 </a>
@@ -273,7 +273,6 @@
         </div>
     </section> <!-- cd-timeline -->
 
-
     <!-- Portfolio Grid Section -->
     <section id="portfolio">
         <div class="container">
@@ -335,59 +334,6 @@
                         </div>
                         <img src="img/portfolio/markmonteiro.png" class="img-responsive" alt="">
                     </a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact" class="success">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>Contact Me</h2>
-                    <hr class="star-primary">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <form name="sentMessage" id="contactForm" novalidate>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Name</label>
-                                <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Email Address</label>
-                                <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Phone Number</label>
-                                <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Message</label>
-                                <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <br>
-                        <div id="success"></div>
-                        <div class="row">
-                            <div class="form-group col-xs-12">
-                                <button type="submit" class="btn btn-success btn-lg">Send</button>
-                            </div>
-                        </div>
-                    </form>
                 </div>
             </div>
         </div>
