Force 'save as...' dialog on resume link

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                                 <p>www.markmonteiro.info</p>
                                 <p>1643 McGee Street<br>Sarnia, Ontario N7S2J5</p>
                             </div>
-                            <a class="btn btn-primary" href="/mark-monteiro-resume.pdf"><i class="fa fa-download"></i>Download Resume</a>
+                            <a class="btn btn-primary" href="/mark-monteiro-resume.pdf" download><i class="fa fa-download"></i>Download Resume</a>
                         </div>
                     </div>
                 </div>
