--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@
                 </div>
             </div>
             <div class="row info-container">
-                <div class="col-lg-6 col-lg-offset-3 info">
+                <div class="col-md-6 col-md-offset-3 info">
                     <div class="row">
-                        <div class="col-lg-4">
+                        <div class="col-xs-4 col-xs-offset-4 col-md-4 col-md-offset-0">
                             <img class="img-responsive" src="img/profile.png" alt="Mark Monteiro">
                         </div>
-                        <div class="col-lg-8">
+                        <div class="col-xs-12 col-md-8">
                             <div class="info-labels">
                                 <p>Email</p>
                                 <p>Phone</p>
@@ -156,6 +156,10 @@
                                 <p>www.markmonteiro.info</p>
                                 <p>1643 McGee Street<br>Sarnia, Ontario N7S2J5</p>
                             </div>
+                        </div>
+                    </div>
+                    <div class="row text-center">
+                        <div class=" col-md-8 col-md-offset-4">
                             <a class="btn btn-primary" href="/mark-monteiro-resume.pdf" download><i class="fa fa-download"></i>Download Resume</a>
                         </div>
                     </div>
