--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <a href="#portfolio">Portfolio</a>
                     </li>
                     <li>
-                        <a href="mailto:mark.monteiro23@gmail.com?subject=Awesome+Job+Offer+From+%5Benter+your+company+name+here%5D" target="_blank">Contact</a>
+                        <a href="mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20From%20%5Benter%20your%20company%20name%20here%5D" target="_blank">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -149,10 +149,10 @@
                                 <p>Website</p>
                             </div>
                             <div class="info-data">
-                                <p>mark.monteiro23@gmail.com</p>
+                                <p><a href="mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20From%20%5Benter%20your%20company%20name%20here%5D" target="_blank">mark.monteiro23@gmail.com</a></p>
                                 <p>226-349-3224</p>
                                 <p>May 18, 1991</p>
-                                <p>www.markmonteiro.info</p>
+                                <p><a href="www.markmonteiro.info">www.markmonteiro.info</a></p>
                             </div>
                         </div>
                     </div>
@@ -220,7 +220,7 @@
                     <h2>Middle East Technical University</h2>
                     <h3>Computer Engineering (Intl. Exchange)</h3>
                     <span class='cd-timeline-location'>Ankara, Turkey</span>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, obcaecati, quisquam id molestias eaque asperiores voluptatibus cupiditate error assumenda delectus odit similique earum voluptatem doloremque dolorem ipsam quae rerum quis. Odit, itaque, deserunt corporis vero ipsum nisi eius odio natus ullam provident pariatur temporibus quia eos repellat consequuntur perferendis enim amet quae quasi repudiandae sed quod veniam dolore possimus rem voluptatum eveniet eligendi quis fugiat aliquam sunt similique aut adipisci.</p>
+                    <p>The international exchange program allows a student to spend a number of semesters obtaining credits for their home institution in another country. METU is widely considered to be the top university in Turkey, but the experience is not only educational. There is much to learn culturally in Turkey and often while travelling to new countries you also learn more about yourself.</p>
                     <span class="cd-date">Sept 2013 - May 2014</span>
                 </div> <!-- cd-timeline-content -->
             </div> <!-- cd-timeline-block -->
@@ -397,16 +397,15 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Innovaction</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/innovaction.png" class="img-responsive img-centered" alt="">
-                            <p>This WordPress website was created using a base theme that was modified to add content and fit the needs of Innovaction. Notable changes include adding multilingual support and updating layouts and styles to suit the company.</p>
+                            <p>This is the company website for Innovaction that features information on their different projects and employees. It is a WordPress website that was created by modifying a base theme and adding additional content. Notable changes include adding multilingual support and updating layouts and styles to suit the company.</p>
                             <ul class="list-inline item-details">
-                                <li>Website:
-                                    <strong><a href="http://innovaction.co">innovaction.co</a>
-                                    </strong>
+                                <li>
+                                    Website: <strong><a href="http://innovaction.co">innovaction.co</a></strong>
                                 </li>
-                                <li>Date: <strong><a href="http://startbootstrap.com">April 2014</a></strong></li>
+                                <li>Date: <strong>April 2014</strong></li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
@@ -427,14 +426,13 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Fashionator</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/fashionator.jpg" class="img-responsive img-centered" alt="">
                             <p>The fashionator project was started to give users the ability to catalogue their clothes in order to buy and sell them, as well as recieve fashion tips from real experts. The website was developed using PHP, backed by a MySQL database. In the end the website was never completed and the project was abandoned in order to move on to more promising ideas. However, the site still exists in a partially functioning state.</p>
                             <ul class="list-inline item-details">
-                                <li>Website:
-                                    <strong><a href="http://www.innovaction.co/fashionator/">innovaction.co/fashionator</a>
-                                    </strong>
+                                <li>
+                                    Website: <strong><a href="http://www.innovaction.co/fashionator/">innovaction.co/fashionator</a></strong>
                                 </li>
                                 <li>Date: <strong>April 2014</strong></li>
                             </ul>
@@ -460,7 +458,10 @@
                             <h2>Smokes, Let's Go</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/smokesletsgo.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p>
+                                This site was made as a joke between a few friends as a tribute to the tv show Trailer Park Boys. Though it is very simple in execution, the development involved getting familiar with a few new technologies.
+                                The website does a simple search and displays the results using the Google Maps Javascript API. It is hosted using the Amazon EC2 elastic cloud hosting system.
+                            </p>
                             <ul class="list-inline item-details">
                                 <li>Website:
                                     <strong><a href="http://smokesletsgo.com">smokesletsgo.com</a>
@@ -494,7 +495,9 @@
                             <h2>this->name</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/markmonteiro.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p>
+                            This site is hosted using Github Pages (static hosting using Jekyll). Automated CI is performed using Travis. <!-- If you want to see something cool, use the Konami code -->
+                            </p>
                             <ul class="list-inline item-details">
                                 <li>Website:
                                     <strong><a href="http://markmonteiro.info">markmonteiro.info</a>
