fix html-proofer errors

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1">
-                    <p>Welcome to my homepage! Here you can see a summary of my education, experiences, and projects I have worked only. If you like what you see, or just want some more information about myself, please <a href="#contact">drop me a line</a>!</p>
+                    <p>Welcome to my homepage! Here you can see a summary of my education, experiences, and projects I have worked only. If you like what you see, or just want some more information about myself, please <a href="mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20From%20%5Benter%20your%20company%20name%20here%5D" target="_blank">drop me a line</a>!</p>
                 </div>
             </div>
             <div class="row info-container">
@@ -152,7 +152,7 @@
                                 <p><a href="mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20From%20%5Benter%20your%20company%20name%20here%5D" target="_blank">mark.monteiro23@gmail.com</a></p>
                                 <p>226-349-3224</p>
                                 <p>May 18, 1991</p>
-                                <p><a href="www.markmonteiro.info">www.markmonteiro.info</a></p>
+                                <p><a href="index.html">www.markmonteiro.info</a></p>
                             </div>
                         </div>
                     </div>
@@ -292,7 +292,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/countify.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/countify.png" class="img-responsive" alt="Countify Logo">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -302,7 +302,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/innovaction.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/innovaction.png" class="img-responsive" alt="Innovaction Logo">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -312,7 +312,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/fashionator.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/fashionator.jpg" class="img-responsive" alt="Fashionator Logo">
                     </a>
                 </div>
             </div>
@@ -324,7 +324,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/smokesletsgo.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/smokesletsgo.png" class="img-responsive" alt="Smokes, Let's Go Logo">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -334,7 +334,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/markmonteiro.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/markmonteiro.png" class="img-responsive" alt="markmonteiro.info Logo">
                     </a>
                 </div>
             </div>
@@ -368,7 +368,7 @@
                         <div class="modal-body">
                             <h2>Countify</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/countify.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/countify.png" class="img-responsive img-centered" alt="Countify Logo">
                             <p>The Countify product is a stylish sign that can be hung outside a business to track customer check-ins on Foursquare in real-time. The website was developed using ASP.net MVC technology and uses a custom-written OAuth2 client (<a href="https://github.com/mark-monteiro/FoursquareOAuth2Client">source</a>) to interact with the Foursquare API for authentication. Once authenticated, the back-end processes push notification from Foursquare to update the counter in real-time. Each customer is provided with a personal dashboard on the website to manage their sign.</p>
                             <p>In the time since this initial development, the product has evolved with Foursquare to use the Swarm logo and has rebranded as Multify.</p>
                             <ul class="list-inline item-details">
@@ -399,7 +399,7 @@
                         <div class="modal-body">
                             <h2>Innovaction</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/innovaction.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/innovaction.png" class="img-responsive img-centered" alt="Innovaction Logo">
                             <p>This is the company website for Innovaction that features information on their different projects and employees. It is a WordPress website that was created by modifying a base theme and adding additional content. Notable changes include adding multilingual support and updating layouts and styles to suit the company.</p>
                             <ul class="list-inline item-details">
                                 <li>
@@ -428,7 +428,7 @@
                         <div class="modal-body">
                             <h2>Fashionator</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/fashionator.jpg" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/fashionator.jpg" class="img-responsive img-centered" alt="Fashionator Logo">
                             <p>The fashionator project was started to give users the ability to catalogue their clothes in order to buy and sell them, as well as recieve fashion tips from real experts. The website was developed using PHP, backed by a MySQL database. In the end the website was never completed and the project was abandoned in order to move on to more promising ideas. However, the site still exists in a partially functioning state.</p>
                             <ul class="list-inline item-details">
                                 <li>
@@ -457,7 +457,7 @@
                         <div class="modal-body">
                             <h2>Smokes, Let's Go</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/smokesletsgo.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/smokesletsgo.png" class="img-responsive img-centered" alt="Smokes, Let's Go Logo">
                             <p>
                                 This site was made as a joke between a few friends as a tribute to the tv show Trailer Park Boys. Though it is very simple in execution, the development involved getting familiar with a few new technologies.
                                 The website does a simple search and displays the results using the Google Maps Javascript API. It is hosted using the Amazon EC2 elastic cloud hosting system.
@@ -494,7 +494,7 @@
                         <div class="modal-body">
                             <h2>this->name</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/markmonteiro.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/markmonteiro.png" class="img-responsive img-centered" alt="markmonteiro.info Logo">
                             <p>
                             This site is hosted using Github Pages (static hosting using Jekyll). Automated CI is performed using Travis. <!-- If you want to see something cool, use the Konami code -->
                             </p>
@@ -532,7 +532,6 @@
 
     <!-- Contact Form JavaScript -->
     <script type="text/javascript" src="js/jqBootstrapValidation.js"></script>
-    <script type="text/javascript" src="js/contact_me.js"></script>
 
     <!-- Custom Theme JavaScript -->
     <script type="text/javascript" src="js/freelancer.js"></script>
