fix travis errors

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <section id="resume" class="success">
         <div class="cd-container">
             <div class="cd-timeline-label">
-                <h2 class="label label-primary">Experience</span>
+                <h2 class="label label-primary">Experience</h2>
             </div>
 
             <div class="cd-timeline-block">
