use variable to store email href

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+---
+email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20From%20%5Benter%20your%20company%20name%20here%5D
+---
 <!DOCTYPE html>
 <html lang="en">
 
@@ -65,7 +68,7 @@
                         <a href="#portfolio">Portfolio</a>
                     </li>
                     <li>
-                        <a href="mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20From%20%5Benter%20your%20company%20name%20here%5D" target="_blank">Contact</a>
+                        <a href="{{page.email_href}}" target="_blank">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -86,7 +89,7 @@
                         <span class="skills">Software Engineer - Web Developer</span>
                         <ul class="social">
                             <li>
-                                <a href="mailto:mark.monteiro23@gmail.com?subject=Awesome+Job+Offer+From+%5Benter+your+company+name+here%5D" class="fa-stack" target="_blank">
+                                <a href="{{page.email_href}}" class="fa-stack" target="_blank">
                                     <i class="fa fa-circle-thin fa-stack-2x"></i>
                                     <i class="fa fa-envelope-o fa-stack-1x"></i>
                                 </a>
@@ -133,7 +136,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1">
-                    <p>Welcome to my homepage! Here you can see a summary of my education, experiences, and projects I have worked only. If you like what you see, or just want some more information about myself, please <a href="mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20From%20%5Benter%20your%20company%20name%20here%5D" target="_blank">drop me a line</a>!</p>
+                    <p>Welcome to my homepage! Here you can see a summary of my education, experiences, and projects I have worked only. If you like what you see, or just want some more information about myself, please <a href="{{page.email_href}}" target="_blank">drop me a line</a>!</p>
                 </div>
             </div>
             <div class="row info-container">
@@ -150,7 +153,7 @@
                                 <p>Website</p>
                             </div>
                             <div class="info-data">
-                                <p><a href="mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20From%20%5Benter%20your%20company%20name%20here%5D" target="_blank">mark.monteiro23@gmail.com</a></p>
+                                <p><a href="{{page.email_href}}" target="_blank">mark.monteiro23@gmail.com</a></p>
                                 <p>226-349-3224</p>
                                 <p>May 18, 1991</p>
                                 <p><a href="index.html">www.markmonteiro.info</a></p>
