--- a/index.html
+++ b/index.html
@@ -289,61 +289,13 @@ email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20Fro
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#countify" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/countify.png" class="img-responsive" alt="Countify Logo">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#innovaction" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/innovaction.png" class="img-responsive" alt="Innovaction Logo">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#fashionator" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/fashionator.jpg" class="img-responsive" alt="Fashionator Logo">
-                    </a>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-4 col-sm-offset-2 portfolio-item">
-                    <a href="#smokesletsgo" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/smokesletsgo.png" class="img-responsive" alt="Smokes, Let's Go Logo">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#markmonteiroinfo" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/markmonteiro.png" class="img-responsive" alt="markmonteiro.info Logo">
-                    </a>
-                </div>
+                {% include portfolio-items.html %}
             </div>
         </div>
     </section>
+
+    <!-- Portfolio Modals -->
+    {% include portfolio-modals.html %}
 
     <!-- Footer -->
     <footer class="text-center">
@@ -355,170 +307,6 @@ email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20Fro
         <a class="btn btn-primary" href="#page-top">
             <i class="fa fa-chevron-up"></i>
         </a>
-    </div>
-
-    <!-- Portfolio Modals -->
-    <div class="portfolio-modal modal fade" id="countify" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <h2>Countify</h2>
-                            <hr class="star-primary">
-                            <img src="img/portfolio/countify.png" class="img-responsive img-centered" alt="Countify Logo">
-                            <p>The Countify product is a stylish sign that can be hung outside a business to track customer check-ins on Foursquare in real-time. The website was developed using ASP.net MVC technology and uses a custom-written OAuth2 client (<a href="https://github.com/mark-monteiro/FoursquareOAuth2Client">source</a>) to interact with the Foursquare API for authentication. Once authenticated, the back-end processes push notification from Foursquare to update the counter in real-time. Each customer is provided with a personal dashboard on the website to manage their sign.</p>
-                            <p>In the time since this initial development, the product has evolved with Foursquare to use the Swarm logo and has rebranded as Multify.</p>
-                            <ul class="list-inline item-details">
-                                <li>Website:
-                                    <strong><a href="http://multify.co">multify.co</a>
-                                    </strong>
-                                </li>
-                                <li>Developed: <strong>April 2014</strong></li>
-                            </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="portfolio-modal modal fade" id="innovaction" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <h2>Innovaction</h2>
-                            <hr class="star-primary">
-                            <img src="img/portfolio/innovaction.png" class="img-responsive img-centered" alt="Innovaction Logo">
-                            <p>This is the company website for Innovaction that features information on their different projects and employees. It is a WordPress website that was created by modifying a base theme and adding additional content. Notable changes include adding multilingual support and updating layouts and styles to suit the company.</p>
-                            <ul class="list-inline item-details">
-                                <li>
-                                    Website: <strong><a href="http://innovaction.co">innovaction.co</a></strong>
-                                </li>
-                                <li>Date: <strong>April 2014</strong></li>
-                            </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="portfolio-modal modal fade" id="fashionator" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <h2>Fashionator</h2>
-                            <hr class="star-primary">
-                            <img src="img/portfolio/fashionator.jpg" class="img-responsive img-centered" alt="Fashionator Logo">
-                            <p>The fashionator project was started to give users the ability to catalogue their clothes in order to buy and sell them, as well as recieve fashion tips from real experts. The website was developed using PHP, backed by a MySQL database. In the end the website was never completed and the project was abandoned in order to move on to more promising ideas. However, the site still exists in a partially functioning state.</p>
-                            <ul class="list-inline item-details">
-                                <li>
-                                    Website: <strong><a href="http://www.innovaction.co/fashionator/">innovaction.co/fashionator</a></strong>
-                                </li>
-                                <li>Date: <strong>April 2014</strong></li>
-                            </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="portfolio-modal modal fade" id="smokesletsgo" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <h2>Smokes, Let's Go</h2>
-                            <hr class="star-primary">
-                            <img src="img/portfolio/smokesletsgo.png" class="img-responsive img-centered" alt="Smokes, Let's Go Logo">
-                            <p>
-                                This site was made as a joke between a few friends as a tribute to the tv show Trailer Park Boys. Though it is very simple in execution, the development involved getting familiar with a few new technologies.
-                                The website does a simple search and displays the results using the Google Maps Javascript API. It is hosted using the Amazon EC2 elastic cloud hosting system.
-                            </p>
-                            <ul class="list-inline item-details">
-                                <li>Website:
-                                    <strong><a href="http://smokesletsgo.com">smokesletsgo.com</a>
-                                    </strong>
-                                </li>
-                                <li>Source:
-                                    <strong><a href="https://github.com/mark-monteiro/SmokesLetsGo/">github.com/mark-monteiro/SmokesLetsGo</a>
-                                    </strong>
-                                </li>
-                                <li>Developed: <strong>August 2014</strong></li>
-                            </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="portfolio-modal modal fade" id="markmonteiroinfo" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <h2>this->name</h2>
-                            <hr class="star-primary">
-                            <img src="img/portfolio/markmonteiro.png" class="img-responsive img-centered" alt="markmonteiro.info Logo">
-                            <p>
-                            This site is hosted using Github Pages (static hosting using Jekyll). Automated CI is performed using Travis. <!-- If you want to see something cool, use the Konami code -->
-                            </p>
-                            <ul class="list-inline item-details">
-                                <li>Website:
-                                    <strong><a href="http://markmonteiro.info">markmonteiro.info</a>
-                                    </strong>
-                                </li>
-                                <li>Source:
-                                    <strong><a href="https://github.com/mark-monteiro/markmonteiro.info/">github.com/mark-monteiro/markmonteiro.info</a>
-                                    </strong>
-                                </li>
-                                <li>Developed: <strong>April 2015</strong></li>
-                            </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
 
     <!-- jQuery -->
