add content for experience section

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20Fro
                     <h3>Innovaction</h3>
                     <span class='cd-timeline-location'>Ankara, Turkey</span>
                     <p>
-                        This was a part time position working with a small startup company that was based based out of an incubator on the campus of Middle East Technical University. They had several products/projects in flight and this job involved creating several websites for these products.
+                        This was a part time position working with a small startup company that was based based out of an incubator on the campus of Middle East Technical University. They had several products/projects in flight and this job involved creating websites for these products.
                     </p>
                     <p><strong>Projects</strong>: <a href="#countify" data-toggle="modal">Countify</a>, <a href="#innovaction" data-toggle="modal">Innovaction</a>, <a href="#fashionator" data-toggle="modal">Fashionator</a></p>
                     <p><strong>Technologies</strong>: ASP.net MVC, OAuth2 (Foursquare API), Entity Framework, Visual Studio Online, WordPress, PHP, MySql</p>
@@ -235,7 +235,9 @@ email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20Fro
                     <h2>Web Developer</h2>
                     <h3>Phoenix Interactive</h3>
                     <span class='cd-timeline-location'>London, Ontario</span>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+                    <p>
+                        Oversaw the design and development of a new proof-of-concept developer portal. Worked on the project from start to finish. This included the creation of potential use-cases for the site, low-level design, implementation, documentation, and a final presentation of the completed work to company executives.
+                    </p>
                     <p><strong>Technologies</strong>: ASP.net MVC, Entity Framework, PDF.js, Microsoft Compiled HTML Help</p>
                     <span class="cd-date">May 2013 - Aug 2013</span>
                 </div> <!-- cd-timeline-content -->
@@ -247,8 +249,10 @@ email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20Fro
                     <h2>Web Developer</h2>
                     <h3>TangramCare</h3>
                     <span class='cd-timeline-location'>Tustin, California</span>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum.</p>
-                    <p><strong>Technologies</strong>: Tornado Web Server, KineticJS, Android App Development, MongoDB</p>
+                    <p>
+                        Worked with a small start-up team  to design and develop a new home-healthcare application. Contributed to the development of the Android mobile application, web server and database.
+                    </p>
+                    <p><strong>Technologies</strong>: Tornado Web Server, KineticJS (HTML5 Canvas), Android App Development, MongoDB</p>
                     <span class="cd-date">Jan 2013 - March 2013</span>
                 </div> <!-- cd-timeline-content -->
             </div> <!-- cd-timeline-block -->
@@ -259,7 +263,9 @@ email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20Fro
                     <h2>Software Engineer</h2>
                     <h3>Phoenix Interactive</h3>
                     <span class='cd-timeline-location'>London, Ontario</span>
-                    <p>This is the content of the last section</p>
+                    <p>
+                        Designed, coded, reviewed, tested and validated software as part of an agile development team. The software was part of back-end server software used by several major banks to manage large fleets (thousands) of ATMs. This also involved limited work in a propriatary version of C++ that ran on the ATMs themselves.
+                    </p>
                     <p><strong>Technologies</strong>: C#, C++, Entity Framework, Unity (Dependency Injection), MKS Integrity</p>
                     <span class="cd-date">May 2012 - Aug 2012</span>
                 </div> <!-- cd-timeline-content -->
@@ -268,10 +274,12 @@ email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20Fro
             <div class="cd-timeline-block">
                 <div class="cd-timeline-point"></div>
                 <div class="cd-timeline-content">
-                    <h2>Software Support Specialise</h2>
+                    <h2>Software Support Specialist</h2>
                     <h3>Research In Motion Ltd.</h3>
                     <span class='cd-timeline-location'>Waterloo, Ontario</span>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum.</p>
+                    <p>
+                        Provided software support for several developer tools. This involved managing user permissions, answering questions, and performing administrative tasks. Created two web applications for the support team during spare time.
+                    </p>
                     <p><strong>Technologies</strong>: PHP, Oracle Database, JIRA, Rally, Perforce</p>
                     <span class="cd-date">Sept 2011 - Dec 2011</span>
                 </div> <!-- cd-timeline-content -->
