add content for projects

--- a/_projects/markmonteiroinfo.html
+++ b/_projects/markmonteiroinfo.html
@@ -6,5 +6,5 @@ source: https://github.com/mark-monteiro/mark-monteiro.github.io
 developed: April 2015
 ---
 <p>
-    Describe some stuff
+    This website started from a free base theme from <a href="http://startbootstrap.com/template-overviews/freelancer/">startbootstrap.com/</a>. Notable modifications include the incorporation and modification of a vertical timeline from <a href="http://codyhouse.co/gem/vertical-timeline/">codyhouse.co</a>, and using the collections and templating features of the Jekyll framework to abstract the rendering of each project in the portfolio section. The site is hosted using GitHub pages, which profides simple, free hosting for static websites using the Jekyll web framework.
 </p>
