--- a/_projects/smokesletsgo.html
+++ b/_projects/smokesletsgo.html
@@ -8,4 +8,5 @@ developed: August 2014
 <p>
     This site was made as a joke between a few friends as a tribute to the tv show Trailer Park Boys. Though it is very simple in execution, the development involved getting familiar with a few new technologies.
     The website does a simple search and displays the results using the Google Maps Javascript API. It is hosted using the Amazon EC2 elastic cloud hosting system.
+    The project uses the online PhoneGap Build system to package the web application into native applications for Android, iOS, Windows Phone and Blackberry (though none have been published). In addition, pushing to the branch on GitHub triggers a web hook on the that updates a test server (test.smokesletsgo.com). The same hook also packages the new source code in a .zip file, uploads it to the PhoneGap Build website, and triggers a new build using the PhoneGap Build API.
 </p>
