--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20Fro
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img src="img/profile.png" alt="Mark Monteiro">
+                    <img src="img/logo.png" alt="Mark Monteiro">
                     <div class="intro-text">
                         <span class="name">Mark Monteiro</span>
                         <hr class="hidden-xs star-light">
