--- a/index.html
+++ b/index.html
@@ -317,17 +317,11 @@ email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20Fro
         </a>
     </div>
 
-    <!-- jQuery -->
+    <!-- Libraries -->
     <script type="text/javascript" src="js/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
-
-    <!-- Plugin JavaScript -->
     <script type="text/javascript" src="js/modernizr.js"></script>
     <script type="text/javascript" src="js/vertical-timeline.js"></script>
-    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script type="text/javascript" src="js/classie.js"></script>
     <script type="text/javascript" src="js/cbpAnimatedHeader.js"></script>
 
     <!-- Custom Theme JavaScript -->
