--- a/_projects/2-countify.html
+++ b/_projects/2-countify.html
@@ -5,7 +5,7 @@ website: http://multify.co
 developed: April 2014
 ---
 <p>
-	The Countify product is a stylish sign that can be hung outside a business to track customer check-ins on Foursquare in real-time. The website was developed using ASP.net MVC technology and uses a custom-written OAuth2 client (<a href="https://github.com/mark-monteiro/FoursquareOAuth2Client">source</a>) to interact with the Foursquare API for authentication. Once authenticated, the back-end processes push notification from Foursquare to update the counter in real-time. Each customer is provided with a personal dashboard on the website to manage their sign.
+	The Countify product is a stylish sign that can be hung outside a business to track customer check-ins on Foursquare in real-time. The website was developed using ASP.net MVC technology and uses a custom-written OAuth2 client (<a href="https://github.com/mark-monteiro/FoursquareOAuth2Client">source</a>) to interact with the Foursquare API for authentication. Once authenticated, the back-end server processes push notification from Foursquare in real-time and sends updates to the Arduino board that runs the counter. Each customer is provided with a personal dashboard on the website to manage their sign.
 </p>
 <p>
 	In the time since this initial development, the product has evolved with Foursquare to use the Swarm logo and has rebranded as Multify.
