--- a/index.html
+++ b/index.html
@@ -184,7 +184,9 @@ email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20Fro
                     <h3>Bachelor of Computer Science</h3>
                     <span class='cd-timeline-location'>Waterloo, Ontario</span>
                     <p>Five-year program developing a solid understanding of the fundamentals of computer science and its applications. This is a co-operative education program involving six work terms as part of the degree, providing a total of two years of valuable work experience.</p>
-                    <p><strong>Relevant Courses</strong>: Distributed Systems, Concurrent and Parallel Programming, Intr. to Artificial Intelligence, Computer Architecture, Database Management, Data Structures and Data Management, Operating Systems, Object-Oriented Software Development
+                    <p>
+                        <strong>Relevant Courses</strong>: Distributed Systems, Concurrent and Parallel Programming, Computer Architecture, Database Management, Algorithms, Data Structures and Data Management, Operating Systems, Object-Oriented Software Development
+                    </p>
                     <span class="cd-date">Sept 2009 - April 2015</span>
                 </div> <!-- cd-timeline-content -->
             </div> <!-- cd-timeline-block -->
@@ -225,6 +227,9 @@ email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20Fro
                     <h3>Computer Engineering (Intl. Exchange)</h3>
                     <span class='cd-timeline-location'>Ankara, Turkey</span>
                     <p>The international exchange program allows a student to spend a number of semesters obtaining credits for their home institution in another country. METU is widely considered to be the top university in Turkey, but the experience is not only educational. There is much to learn culturally in Turkey and often while travelling to new countries you also learn more about yourself.</p>
+                    <p>
+                        <strong>Relevant Courses</strong>: Introduction to Artificial Intelligence, Computer Networks, Information Systems Management
+                    </p>
                     <span class="cd-date">Sept 2013 - May 2014</span>
                 </div> <!-- cd-timeline-content -->
             </div> <!-- cd-timeline-block -->
