--- a/index.html
+++ b/index.html
@@ -34,6 +34,17 @@ email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20Fro
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <!-- Google Analytics -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-7688784-3', 'auto');
+      ga('send', 'pageview');
+    </script>
+
 </head>
 
 <body id="page-top" class="index">
