--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20Fro
     <link href="//cdn.jsdelivr.net/bootswatch/3.3.2/flatly/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/freelancer.css" rel="stylesheet">
+    <link href="css/site.css" rel="stylesheet">
     <link href="css/vertical-timeline.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
@@ -96,7 +96,7 @@ email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20Fro
                     <img src="img/logo.png" alt="Mark Monteiro">
                     <div class="intro-text">
                         <span class="name">Mark Monteiro</span>
-                        <hr class="hidden-xs star-light">
+                        <hr class="hidden-xs hr-light">
                         <span class="skills">Software Engineer - Web Developer</span>
                         <ul class="social">
                             <li>
@@ -142,7 +142,7 @@ email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20Fro
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>About Me</h2>
-                    <hr class="star-primary">
+                    <hr class="hr-primary">
                 </div>
             </div>
             <div class="row">
@@ -309,7 +309,7 @@ email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20Fro
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Projects</h2>
-                    <hr class="star-primary">
+                    <hr class="hr-primary">
                 </div>
             </div>
             <div class="row">
