fix spelling mistake

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20Fro
             </div>
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1">
-                    <p>Welcome to my homepage! Here you can see a summary of my education, experiences, and projects I have worked only. If you like what you see, or just want some more information about myself, please <a href="{{page.email_href}}" target="_blank">drop me a line</a>!</p>
+                    <p>Welcome to my homepage! Here you can see a summary of my education, experiences, and projects I have worked on. If you like what you see, or just want some more information about myself, please <a href="{{page.email_href}}" target="_blank">drop me a line</a>!</p>
                 </div>
             </div>
             <div class="row info-container">
