update index page meta tags

--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@ email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20Fro
 <html lang="en">
 
 <head>
-
+    <title>Mark Monteiro</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Mark Monteiro</title>
+    <meta name="description" content="Mark Monteiro is a software engineer and web developer recently graduated from the University of Waterloo. This is his personal resume website.">
+    <meta name="author" content="Mark Monteiro">
     <link rel="icon" type="image/ico" href="favicon.ico">
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
