add tech lists for projects

--- a/_projects/3-smokesletsgo.html
+++ b/_projects/3-smokesletsgo.html
@@ -4,6 +4,13 @@ id: smokesletsgo
 website: http://smokesletsgo.com
 source: https://github.com/mark-monteiro/SmokesLetsGo/
 developed: August 2014
+technologies:
+ - Google Maps Javascript API
+ - PHP
+ - Adobe PhoneGap (Cordova)
+ - PhoneGap Build API
+ - Github Webhooks
+ - Amazon Elastic Compute Cloud (EC2)
 ---
 <p>
     This site was made as a joke between a few friends as a tribute to the tv show Trailer Park Boys. Though it is very simple in execution, the development involved getting familiar with a few new technologies.
