--- a/_projects/2-countify.html
+++ b/_projects/2-countify.html
@@ -3,6 +3,12 @@ title: Countify
 id: countify
 website: http://multify.co
 developed: April 2014
+technologies:
+ - C#
+ - ASP.net MVC
+ - OAuth2 (Foursquare Realtime API)
+ - Entity Framework
+ - MySql
 ---
 <p>
 	The Countify product is a stylish sign that can be hung outside a business to track customer check-ins on Foursquare in real-time. The website was developed using ASP.net MVC technology and uses a custom-written OAuth2 client (<a href="https://github.com/mark-monteiro/FoursquareOAuth2Client">source</a>) to interact with the Foursquare API for authentication. Once authenticated, the back-end server processes push notification from Foursquare in real-time and sends updates to the Arduino board that runs the counter. Each customer is provided with a personal dashboard on the website to manage their sign.
