--- a/_projects/4-innovaction.html
+++ b/_projects/4-innovaction.html
@@ -3,6 +3,10 @@ title: Innovaction
 id: innovaction
 website: http://innovaction.co
 developed: April 2014
+technologies:
+ - WordPress
+ - PHP
+ - WordPress Plugins
 ---
 <p>
 	This is the company website for Innovaction that features information on their different projects and employees. It is a WordPress website that was created by modifying a base theme and adding additional content. Notable changes include adding multilingual support and updating layouts and styles to suit the company.
